unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/NCM_Content_Version_SubRecord__c.object-meta.xml
<CustomObject>
    <label>NCM Content Version</label>
    <nameField>
        <label>NCM Content Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCM Content Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>