unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Content_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Number__c</fullName>
    <displayFormat>CV-{000000}</displayFormat>
    <label>Content Version Number</label>
    <type>AutoNumber</type>
</CustomField>