unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Content_Version_Review__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Content Version Review that included this Version as part of the change process.</description>
    <inlineHelpText>Content Version Review that included this Version as part of the change process.</inlineHelpText>
    <label>Content Version Review</label>
    <referenceTo>Content_Version_Review__c</referenceTo>
    <relationshipLabel>NCM Content Versions</relationshipLabel>
    <relationshipName>NCM_Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>