unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Days_per_Review_Period__c.field-meta.xml
<CustomField>
    <fullName>Days_per_Review_Period__c</fullName>
    <label>Days per Review Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>