unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Final_Draft_Feedback_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Draft_Feedback_Received__c</fullName>
    <label>Final Draft Feedback Received</label>
    <type>Date</type>
</CustomField>