unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Final_Draft_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Draft_Sent__c</fullName>
    <label>Final Draft Sent</label>
    <type>Date</type>
</CustomField>