unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Homework_Feedback_Recv_d__c.field-meta.xml
<CustomField>
    <fullName>Homework_Feedback_Recv_d__c</fullName>
    <label>Homework Deliverable Due</label>
    <type>Date</type>
</CustomField>