unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Homework_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Homework_Finalized__c</fullName>
    <label>Homework Finalized</label>
    <type>Date</type>
</CustomField>