unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/NCM_Content_Adaptation__c.field-meta.xml
<CustomField>
    <fullName>NCM_Content_Adaptation__c</fullName>
    <label>NCM Content Adaptation</label>
    <referenceTo>NCM_Content_Version__c</referenceTo>
    <relationshipLabel>NCM Content Versions</relationshipLabel>
    <relationshipName>NCM_Content_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>