unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/NCM_Content_Request__c.field-meta.xml
<CustomField>
    <fullName>NCM_Content_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCM Content Request</label>
    <referenceTo>NCM_Content_Request__c</referenceTo>
    <relationshipLabel>NCM Content Versions</relationshipLabel>
    <relationshipName>NCM_Content_Versions1</relationshipName>
    <type>Lookup</type>
</CustomField>