unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/NCMContentVersionID_18__c.field-meta.xml
<CustomField>
    <fullName>NCMContentVersionID_18__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMContentVersionID (18)</label>
    <type>Text</type>
</CustomField>