unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Prelim_Draft_Rec_vd_from_SME__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Draft_Rec_vd_from_SME__c</fullName>
    <label>Prelim Draft Rec&#39;vd from SME</label>
    <type>Date</type>
</CustomField>