unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Prelim_Draft_Sent_to_SME__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Draft_Sent_to_SME__c</fullName>
    <label>Prelim Draft Sent to SME</label>
    <type>Date</type>
</CustomField>