unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Summary_of_Update__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Update__c</fullName>
    <label>Summary of Update</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>