unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Supporting_Materials_Feedback_Recv_d__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Materials_Feedback_Recv_d__c</fullName>
    <label>Supporting Materials Deliverable Due</label>
    <type>Date</type>
</CustomField>