unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Supporting_Materials_Sent__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Materials_Sent__c</fullName>
    <label>Supporting Materials Sent</label>
    <type>Date</type>
</CustomField>