unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Version_ID__c.field-meta.xml
<CustomField>
    <fullName>Version_ID__c</fullName>
    <inlineHelpText>V, followed by 6 digits</inlineHelpText>
    <label>Version ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>