unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Version_Status__c.field-meta.xml
<CustomField>
    <fullName>Version_Status__c</fullName>
    <label>Version Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Record_Status</valueSetName>
    </valueSet>
</CustomField>