unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/Workbook_Print__c.field-meta.xml
<CustomField>
    <fullName>Workbook_Print__c</fullName>
    <label>Workbook Print</label>
    <type>Date</type>
</CustomField>