unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/X1st_Draft_Feedback_Received__c.field-meta.xml
<CustomField>
    <fullName>X1st_Draft_Feedback_Received__c</fullName>
    <label>1st Draft Feedback Received</label>
    <type>Date</type>
</CustomField>