unpackaged/main/default/objects/NCM_Content_Version_SubRecord__c/fields/X1st_Draft_Sent__c.field-meta.xml
<CustomField>
    <fullName>X1st_Draft_Sent__c</fullName>
    <label>1st Draft Sent</label>
    <type>Date</type>
</CustomField>